# django-formulafield

./: .pylintrc  README.md  publish.sh  pyproject.toml  readme.md  requirements.txt
django_formulafield/: admin.py  apps.py  fields.py  formulas.py  mixins.py  models.py  signals.py
django_formulafield/migrations/: 0001_initial.py
django_formulafield/tests/: __init__.py  apps.py  field_test.py  formula_test.py  models.py  settings.py
mock_project/: manage.py
mock_project/formulasample/: admin.py  apps.py  models.py
mock_project/formulasample/migrations/: 0001_initial.py  0002_salesperformance_product_and_more.py  0003_salesperformance_registry_kpi_1_and_more.py
mock_project/mock_project/: asgi.py  settings.py  urls.py  wsgi.py
